# TorchWrapper

./: CMakeLists.txt  README.md  build.sh  main.cpp
torch_wrapper/: flow_inference.cpp  flow_inference.h  heatmap_inference.cpp  heatmap_inference.h  precompilation.cpp
torch_wrapper/internal/: torch_model.h
